Fixed testimonials, spacing, and font-sizes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,7 +28,7 @@ body {
 .social-proof {
     max-width: $max-width-dktp;
     height: 100vh;
-    padding: 9.6rem 1.8rem 0 1.8rem;
+    padding: 9rem 1.8rem 0 1.8rem;
     margin-top: 7rem;
 }
 
@@ -37,7 +37,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
 
-    margin-bottom: 4rem;
+    margin-bottom: 9.6rem;
 }
 
 
@@ -47,7 +47,7 @@ body {
 /******************************/
 
 .copy-text {
-    width: 41%;
+    width: 48.7%;
 }
 
 .sp-title {
@@ -59,7 +59,7 @@ body {
 }
 
 .sp-copy {
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 500;
     color: $p-color;
     line-height: 1.6;
@@ -77,7 +77,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 55%;
+    width: 48%;
 }
 
 .rating {
@@ -143,8 +143,10 @@ body {
 }
 
 .testimonial {
-    width: 27.5rem;
-    height: 17rem;
+    // width: 27.5rem;
+    width: 90%;
+    height: 21rem;
+    // height: auto;
     background: $primary-color;
     line-height: 1.6;
     border-radius: 3%;
@@ -189,6 +191,7 @@ body {
 }
 
 blockquote {
+    font-size: 1.2rem;
     color: $light-color;
 }
 
